--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "gendiff"}]
 [tool.poetry.dependencies]
 python = "^3.11"
 pyyaml = "^6.0"
+pytest-cov = "^4.0.0"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.0.0"
