--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "hexlet-code3"
+name = "hexlet-code"
 version = "0.1.0"
 description = ""
 authors = ["Софья Григорович <sonyashkin@icloud.com>"]
