--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,35 +1,28 @@
-name: gendiff
+name: CI check
 
-on:
-  - push
-  - pull_request
+on: push
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        # we want to test our package on several versions of Python
-        python-version: ["3.10.9"]
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
+      - uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
         with:
-          python-version: ${{ matrix.python-version }}
-        # make depends on poetry
-      - name: Install dependencies
+          python-version: 3.10.9
+      - name: install dependencies
         run: |
-          pip install poetry
+          pip install poetry flake8 pytest
           make install
-      - name: Run linter and pytest
-        run: |
-          make lint
-          make pytest
-      - name: Test & publish code coverage
-        uses: paambaati/codeclimate-action@v3.2.0
-        if: github.ref_name == 'main'
+      - name: Run linter
+        run: make lint
+      - name: Run tests
+        run: make test
+      - name: Code Coverage
+        uses: paambaati/codeclimate-action@v3.0.0
         env:
-          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+          CC_TEST_REPORTER_ID: ee453c3d5ad728fbcb363d35c1daba56a9cebe1d370e26697021520fd31dafef
         with:
           coverageCommand: make test-coverage
+          debug: true
