--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,4 +24,4 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-gendiff = "gendiff.scripts.gendif:main"
+gendiff = "gendiff.scripts.gendiff:main"
