--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ jobs:
           python-version: '3.8'
       - name: install dependencies
         run: |
+          pip3 install poetry
           make install
       - name: Run linter
         run: make lint
